fixed horizontal scroll

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,7 @@ body.fixed{
 
 .page_wrapper{
     background-image: linear-gradient(183deg,rgba(255,255,255,0) 46.73%,#FFF 63.21%),url(../assets/images/first-bg-image_desktop-1x.jpg);
-    background-position: left 484px,center top;
+    background-position: left 484px, center top;
     background-repeat: no-repeat;
     background-size: 100% 825px,100% 1028px;
 }
@@ -41,9 +41,9 @@ body.fixed{
     position: relative;
 }
 .main_nav {
-display: flex;
-align-items: center;
-justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .logo-wrapper {
@@ -83,6 +83,7 @@ justify-content: space-between;
     color: $primaryTextColor;
     position: relative;
     transition: all .2s ease;
+
 }
 .current::after{
     content: '';
@@ -103,7 +104,7 @@ justify-content: space-between;
     text-transform: capitalize;
     color: inherit;
     padding: 28px 0;
-    &:focus, &:hover {
+        &:focus, &:hover {
         color: $accentColor_green;
         font-weight: 700;
     }
@@ -778,9 +779,7 @@ textarea{
 // MOBILE STYLES------------------
 @media screen and (max-width: 767px) {
 // ------------------------------------------
-.mobile{
-    display: block;
-}
+
 .header.menu-open{
     backdrop-filter: none;   
     &::after{
@@ -812,20 +811,19 @@ textarea{
     top: 0;
     margin: 0 auto;
     z-index: 6;
-    height: 70vh;
-    width: 90%;
+    height: 80vh;
+    width: 80%;
     background-color: #fff;
     flex-direction: column;
     justify-content: flex-start;
     gap: 0;
     transition: all 1s ease;
-    transform: translateX(100vw);
+    transform: translateY(-100vH);
     opacity: 0;
-    padding-top: 60px;
+    padding-top: 20px;
     & .nav_link{
         font-size: 23px;
         font-weight: 700;
-        padding: 20px 0;
         text-align: center;
         &::after{
             content: '';
@@ -1265,9 +1263,14 @@ body.dark {
         &::after{
             background-color: rgba(255, 255, 255, 0.2);
         }
-
     }
-    
+
+    .btn-large-coral {
+        padding: 32px 40px 32px 40px;
+        &::after {
+            left: 25%;
+            bottom: 34%;
+    }}
     .nav_list {
         background-color: $primaryTextColor;
         & .nav_link{
